--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -335,8 +335,7 @@
     min-height: 500px;
 }
 
-.el-dialog__wrapper {
-    display: block !important;
+.el-dialog__wrapper {    
     &.detail-view-modal {
         .el-dialog {
             width: 90vw;
@@ -425,4 +424,100 @@
 .data-insert-form {
     display: flex;
     align-items: center;    
+    .tit {
+        @include fontoption(16px, #222, 600,18px);
+        width: 25%;
+    }
+    .input-wrap {
+        flex:1;
+        .el-input-number {
+            width: 100%;
+        }
+        .el-input {
+            width: 100%;
+            .el-input__inner {
+                width: 100%;
+            }
+        }
+    }
+}
+.el-dialog__wrapper {
+    &.data-insert {
+        .el-dialog__body {
+            padding-bottom: 12px;
+        }
+    }
+} 
+
+//lnb menu
+.side-menu__wrap {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 16;
+    display: none;
+    opacity: 0;
+    transition: all 0.3s;
+    &.is-active {
+        display: block;
+        opacity: 1;
+        transition: all 0.3s;
+        .menu__wrap--inner {
+            left:0;
+            transition: all 0.3s;
+        }
+
+    }
+    .menu__wrap--inner {
+        position: fixed;
+        background: #fff;
+        width: 70%;
+        height: 100%;
+        z-index: 17;
+        left: -100%;
+        top: 0;
+        transition: all 0.3s;
+        .menu-header {
+            height: 80px;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            @include fontoption(18px, #000, 700, 20px);
+            .btn-x {
+                position: absolute;
+                right: 12px;
+                top: 50%;
+                transform: translateY(-50%);
+                width: 24px;
+                height:24px;
+                background: url('../image/icon/ico_close.svg') no-repeat center;
+                background-size: 20px auto;
+                border: 0;
+            }
+        }
+        .menu-list {
+            flex:1;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            li {
+                a {
+                    display: block;
+                    padding: 12px 16px;
+                    @include fontoption(18px, #000, 500, 20px);
+                }
+            }
+        }
+    }
+}
+
+.link-group {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 16px;
 }
