--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -519,5 +519,13 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 16px;
+    padding: 64px 16px 32px; 
+    max-width: 70%;
+    margin: 0 auto;
+    .el-button--text {
+        width: 100%;
+    }
+    .logo {
+        text-align: center;
+    }
 }
