--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -529,3 +529,55 @@
         text-align: center;
     }
 }
+
+.login__wrap {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(243,244, 246, 0.9);
+    .login-form__wrap {
+        width: 100%;
+        max-width: 60%;
+        .login-page__logo {
+            text-align: center;        
+        }
+        .login__form {
+            margin-top: 24px;
+            form {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                .input-item__wrap {
+                    position: relative;
+                    .ico-ico {
+                        position: absolute;
+                        left: 10px;
+                        top: 50%;
+                        transform: translateY(-50%);
+                    }
+                }
+            }
+            .el-input {
+                width: 100%;
+                height: 40px;
+                border-radius: 67px;
+                .el-input__inner {
+                    width: 100%;
+                    height: 40px;
+                    border-radius: 67px; 
+                    color: #ddd;
+                    padding-left: 30px;
+                }
+            }
+        }
+        .button__wrap {
+            margin-top: 32px;
+            button {
+                width: 100%;
+            }
+        }
+    }
+}
