--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -76,7 +76,9 @@ body {
 
 .blind,.irtext { @include hiddens;}
 
-
+body {
+    overflow: hidden;
+}
 
 //23.05.10 남다현 & 스크롤 스타일 수정 (textarea 안 스크롤 작업으로 인해 변경)
 ::-webkit-scrollbar {
