--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -4,7 +4,8 @@
     justify-content: space-between;
     height: 56px;
     padding: 32px;
-    border-bottom: 1px solid #E1E3E9;
+    // border-bottom: 1px solid #E1E3E9;
+    background: rgba(22, 184, 96, 1);
     position: relative;
     @media #{$phone} {
         padding: 16px;
@@ -16,12 +17,15 @@
         border: 0;
         padding: 0;
         margin: 0;
-        i {
-            display: block;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        flex-direction: column;
+        justify-content: center;
+        .bar {
             width: 100%;
-            height: 100%;
-            background: url('../image/icon/ico_mo_menu.svg') no-repeat center center;
-            background-size: 20px auto;
+            height: 2px;
+            background-color: #fff;
         }
     }
     .member-msg {
@@ -42,9 +46,9 @@
         transform: translateX(-50%);
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: center;        
         h1 {
-            @include fontoption(18px, #000, bold, 18px);
+            @include fontoption(18px, #fff, bold, 18px);
         }        
     }
 }
@@ -67,23 +71,30 @@
     width: 100%;
     thead {
         th {
-            background-color: #F7F8FA;
-            height: 36px;
+            background: #E2E3E7;
+            height: 50px;
             vertical-align: middle;
             text-align: center;
-            border-top: 1px solid #AEB7C6;
-            border-bottom: 1px solid #E1E3E9;
-            @include fontoption(14px, #717B8A, bold, 14px);
+            @include fontoption(16px, #222222, bold, 16px);
+            @media #{$phone} {
+                height: 36px;
+                @include fontoption(14px, #222222, bold, 14px);
+            }
         }
     }
     tbody {
         td {        
-            padding: 12px 0;
+            padding: 20px 0;
             vertical-align: middle;
+            background-color: #fff;
             border-bottom: 1px solid #E1E3E9;
-            @include fontoption(13px, #717B8A, 300, 13px);
+            @include fontoption(16px, #717B8A, 300, 18px);
             letter-spacing: -0.04em;
             text-align: center;
+            @media #{$phone} {
+                padding: 12px 0;
+                @include fontoption(13px, #717B8A, 300, 13px);
+            }            
             &.text-l {
                 padding-left: 10px;
                 padding-right: 10px;
@@ -100,12 +111,16 @@
     tfoot {
         td {
             background-color: #F7F8FA;
-            height: 36px;
+            padding: 20px 0;
             vertical-align: middle;
             text-align: center;
             border-top: 1px solid #AEB7C6;
             border-bottom: 1px solid #E1E3E9;
-            @include fontoption(14px, #717B8A, bold, 14px);
+            @include fontoption(16px, #717B8A, bold, 16px);
+            @media #{$phone} {                
+                padding: 12px 0;
+                @include fontoption(13px, #717B8A, bold, 13px);
+            }   
         }
     }
 }
@@ -116,19 +131,28 @@
     tbody {
         th {
             background-color: #F7F8FA;
-            height: 36px;
+            padding: 20px 0;
             vertical-align: middle;
             text-align: center;            
             border-bottom: 1px solid #E1E3E9;
-            @include fontoption(14px, #717B8A, bold, 14px);
+            @include fontoption(16px, #717B8A, bold, 16px);
+            @media #{$phone} {                
+                padding: 12px 0;
+                @include fontoption(13px, #222, bold, 13px);
+            }             
         }
         td {        
-            padding: 12px 0;
+            padding: 20px 0;
             vertical-align: middle;
             border-bottom: 1px solid #E1E3E9;
-            @include fontoption(13px, #717B8A, 300, 13px);
+            background-color: #fff;
+            @include fontoption(13px, #222, 300, 13px);
             letter-spacing: -0.04em;
             text-align: center;
+            @media #{$phone} {                
+                padding: 12px 0;
+                @include fontoption(13px, #222, 300, 13px);
+            }  
             &.text-l {
                 padding-left: 10px;
                 padding-right: 10px;
@@ -146,7 +170,10 @@
 
 //페이지네이션
 .bottom__pagination {
-    margin: 16px 0;
+    margin: 32px 0 0;
+    @media #{$phone} {
+        margin: 24px 0;
+    }
     .el-pagination {
         display: flex;
         align-items: center;
@@ -154,13 +181,16 @@
         .btn-prev {
             padding-left: 0;
             padding-right: 0;
+            background: transparent;
         }
         .btn-next {
             padding-left: 0;
+            background: transparent;
         }
         .el-pager {
             li {
                 min-width: 28px;   
+                background-color: transparent;
                 color:#717B8A;
                 font-family: $font-montserrat;
                 font-weight: 300;                
@@ -175,7 +205,7 @@
 
 //검색
 .search-option__wrap {
-    background: #F2F5FA;
+    background: #fff;
     padding: 16px;
     border-radius: 6px;
     display: flex;
@@ -213,10 +243,10 @@
         justify-content: space-between;
         width: 50%;
         &.gap6 {
-            .item-cont {
-                
+            .item-cont {                
                 .el-radio-button__inner {
                     padding: 9px 10px !important;
+                    
                 }
             }
         }
@@ -289,15 +319,26 @@
         }
     }
 }
-
+.el-radio-button__orig-radio:checked+.el-radio-button__inner {
+    background-color: #35AD68;
+    border: 1px solid #35AD68;
+}
 // el reset
 .el-input > .el-input__inner {
-    border: 1px solid #E1E0E5;
+    border: 1px solid #CFD4DA;
+    color:#5A5C5F;
     border-radius: 6px;
     height: 36px;
+    &::placeholder {
+        color:#5A5C5F;
+    }
 }
 .el-radio-button__inner {
     padding: 9px 20px !important;
+    color:#5A5C5F;
+}
+.el-input__icon {
+    line-height: 30px;
 }
 
 // 탭
@@ -305,101 +346,83 @@
     margin:  32px 0;
     .el-tabs--border-card>.el-tabs__header {
         background-color: transparent;
-        border-bottom: 1px solid #E1E3E9;
+        border-bottom: 1px solid #5A5C5F;
         margin: 0;
     }    
     .el-tabs--border-card {
         border: 0px solid #DCDFE6;
+        background-color: transparent;
         box-shadow: 0 0px 0px 0 rgba(0, 0, 0, .12), 0 0 0px 0 rgba(0, 0, 0, .04);
     }
     .el-tabs__nav {
         background-color: transparent;
-        display: flex;
-        justify-content: center;
+        display: flex;        
         float: none;
     }
     .el-tabs__item {
         position: relative;
-        width: 50%;
+        height: 45px;
         text-align: center;
-        color: #AEB7C6 !important;
-        font-size: 14px;
-        line-height: 17px;
+        color: #222222 !important;
+        font-size: 16px;
+        line-height: 48px;
         font-weight: 400;
+        padding: 0 32px;
+        @media #{$phone} {
+            font-size: 14px;
+            line-height: 48px;
+            font-weight: 400;
+            padding: 0 25px;
+        }
+        @media #{$phone480} {
+            padding: 0 15px;
+        }
         &.is-active {
             border-right-color: transparent !important;
             border-left-color: transparent !important;
-            background-color: transparent  !important;
-            color: #0072BC !important;
+            background-color: #222222  !important;
+            color: #fff !important;
+            border-radius: 8px 8px 0px 0px;
             font-weight: 700;
-            &::after {
-                content: '';
-                display: block;
-                width: 100%;
-                height: 2px;
-                bottom: 0;
-                left:0;
-                position: absolute;
-                background-color: #0072BC;
-            }
         }
     }
 }
 .el-tabs--border-card>.el-tabs__content {
-    padding: 15px 0 !important;
+    padding: 24px 0 !important;
 }
 .graph-area {
     min-height: 500px;
+    background-color: #fff;
 }
-
 .el-dialog__wrapper {    
     &.detail-view-modal {
         .el-dialog {
+            width: 90vw;            
+        }
+    }
+    &.detail-view-modal__wrap {
+        .el-dialog {
             width: 90vw;
+            max-height: 70vh;
+            overflow-y: scroll;
+        }
+    }
+    .modal-content {
+        .data-select {
+            max-width: 30%;
+            margin-bottom: 16px;
         }
     }
 }
-.detail-view-modal__wrap {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    left:0;
-    top:0;
-    z-index: 15;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .detail-view-modal {
-        width: 90%;
-        max-height: 85vh;
-        overflow: auto;        
-        background-color: #fff;
-        .modal-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 6px 16px;
-            h2 {
-                @include fontoption(16px, #000, 600, 18px);
-            }
-            .btn-x {
-                width: 24px;
-                height:24px;
-                background: url('../image/icon/ico_close.svg') no-repeat center;
-                background-size: 20px auto;
-                border: 0;
-            }
-        }
-        .modal-content {
-            padding: 16px;
-            .data-select {
-                margin-bottom: 12px;
-                .el-input {
-                    max-width: 50%;                
-                }
-            }
-        }
+.el-dialog__header {
+    background-color: #35AD68;
+    padding: 20px 20px 20px;
+    .el-dialog__title {
+        color:#fff;        
+    }
+    .el-dialog__close {
+        color:#fff;
+        font-size: 30px;
     }
 }
 
@@ -409,7 +432,7 @@
 }
 .image-slider__wrap {
     margin: 32px 0;
-    max-height: 20%;
+    max-height: 250px;
     .swiper-slide {
         img {
             width: 100%;
@@ -563,39 +586,66 @@
         }
     }
 }
-
+.el-upload-list  {
+    display: none;
+}
 
 // 대시보드
 .link-group {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 64px 16px 32px; 
+    padding: 150px 16px 32px;
     max-width: 70%;
     margin: 0 auto;
+    @media #{$phone} {
+        padding: 32px 16px 32px; 
+    }
     .card-group {
         display: flex;
-        gap: 16px;
+        gap: 16px;        
         @media #{$phone} {
             flex-direction: column;
             gap: 12px;
         }
-        .el-col {
+        .el-col {           
+            .el-card {
+                .el-card__body {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    gap: 20px;
+                    @media #{$phone} {
+                        gap: 10px;
+                    }
+                    i {
+                        color:#fff;
+                        font-size: 60px;
+                        @media #{$phone} {
+                            font-size: 30px;
+                        }
+                    }
+                }
+
+            }             
             &:nth-child(1) {
                 .el-card {
                     background-color: #E72A10;    
+                    border-radius: 16px;
                 }                
                 
             }
             &:nth-child(2) {
                 .el-card {
                     background-color: #E8A038;
+                    border-radius: 16px;
                 }                 
                 
             }   
             &:nth-child(3) {
                 .el-card {
                     background-color: #9AC143;
+                    border-radius: 16px;
                 }
             }              
             
@@ -608,7 +658,10 @@
         text-align: center;
     }
     .el-button--text {
-        @include fontoption(16px,#fff, 600, 18px);
+        @include fontoption(20px,#fff, 600, 18px);
+        @media #{$phone} {
+            @include fontoption(16px,#fff, 600, 18px);
+        }
     }
     .el-card {
         aspect-ratio: 1 /1;
