--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -100,6 +100,30 @@
     text-align: right;
     padding-right: 12px;
 }
+.el-table.hide-thead {
+    .el-table__header-wrapper {
+        display: none;
+    }
+    .el-table__body-wrapper {
+        border-top: 1px solid #AEB7C6;
+        tr {
+            td {
+                &:nth-child(1) {
+                    background-color: #F7F8FA;
+                    padding: 20px 0;
+                    vertical-align: middle;
+                    text-align: center;            
+                    border-bottom: 1px solid #E1E3E9;
+                    @include fontoption(16px, #717B8A, bold, 16px);
+                    @media #{$phone} {                
+                        padding: 12px 0;
+                        @include fontoption(13px, #222, bold, 13px);
+                    }
+                } 
+            }
+        }
+    }
+}
 .table-list {
     width: 100%;
     thead {
@@ -265,6 +289,7 @@
                 padding: 10px 30px;
             }
             @media #{$phone} {
+                width: 100%;
                 padding-right: 0;
                 margin-top: 12px;
             }
@@ -325,8 +350,8 @@
                 flex-direction: column;
                 width: 100%;
                 gap: 4px;
-                span {
-                    display: none;
+                .bar {
+                    display: none;                   
                 }
                 .el-input__inner { 
                     width: 95%;
@@ -374,7 +399,12 @@
 .el-input__icon {
     line-height: 30px;
 }
-
+// .search-option__wrap .date-select-area .date-picker span {
+//     @media #{$phone} {
+//         display: block;
+//     }
+    
+// }
 // 탭
 .tabs-cont__wrap {
     margin:  32px 0;
@@ -465,12 +495,20 @@
     overflow-y: scroll;
 }
 .image-slider__wrap {
-    margin: 32px 0;
-    max-height: 250px;
+    margin: 32px 0 0;        
     .swiper-slide {
         img {
             width: 100%;
-            aspect-ratio: 1 /1;
+            height: auto;
+            // aspect-ratio: 1 /1;
+            @media #{$phone} {
+                height: 80%;
+                width: auto;
+                // aspect-ratio: auto;
+            }
+            @media #{phone480} {
+                height: 60%;                
+            }                        
         }
     }
 }
@@ -640,6 +678,13 @@
 .el-dialog__headerbtn:hover .el-dialog__close {color:#fff;}
 .el-input-number {
     width: 90%;
+    line-height: 36px;
+}
+.color-success {
+    color:#0072BC;
+}
+.color-error {
+    color:#FF4949;
 }
 // 대시보드
 .link-group {
@@ -669,6 +714,9 @@
                     gap: 20px;
                     .el-main {
                         padding:0;
+                        @media #{$phone} {
+                            padding:0;
+                        }
                     }
                     @media #{$phone} {
                         gap: 10px;
@@ -731,12 +779,27 @@
     .el-card {
         aspect-ratio: 1 / 0.7;
         @media #{$phone} {
-            aspect-ratio: 1 / 0.3;
+            aspect-ratio: 1 / 0.5;
         }
         .el-card__body {
             height: 100%;
             display: flex;
             align-items: center;                    
+        }
+    }
+}
+.el-card__body, 
+.el-main {
+    @media #{$phone} {
+        padding: 0;
+    }
+}
+.el-table.notice-list {
+    tr {
+        td {
+            &:nth-child(2) {
+                text-align: left;
+            }
         }
     }
 }
